# etl_cb

./: .env  .gitignore  Dockerfile  README.md  ans.xml  constants.py  etl.py  main.py  pyproject.toml  requirements.txt
constants/: constants.py  db_config.py
migrations/: 20250608131833_new_currency_table.sql  20250608133042_rename_currency_col.sql  20250608133228_new_course_currenct_table.sql  20250608133442_insert_currency.sql  20250608140345_new_course_currency_table.sql  20250608151831_rename_table.sql  20250608151939_rename_table_2.sql  20250608152103_rename_columnt_with_date.sql  20250608152608_last_rate_view.sql  20250608153609_avg_all_rate_view.sql  20250608154436_diff_rate_view.sql
scripts/: get_insert_query.py
storage/postgres/: postgres.py
