[project]
name = "cb-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "flake8>=7.2.0",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "ruff>=0.11.13",
]
